Update cấu trúc thư mục React

--- a/BackEnd/config/config.json
+++ b/BackEnd/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "300699",
     "database": "shoedb",
     "host": "localhost",
     "dialect": "postgres"
