--- a/FontEnd/package.json
+++ b/FontEnd/package.json
@@ -14,6 +14,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-image-magnifiers": "^1.4.0",
+    "react-image-magnify": "^2.7.4",
     "react-inner-image-zoom": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
