--- a/FontEnd/package.json
+++ b/FontEnd/package.json
@@ -8,17 +8,21 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.4",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "bootstrap-input-spinner": "^1.16.3",
+    "js-cookie": "^2.2.1",
     "menu": "^0.2.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-image-magnifiers": "^1.4.0",
     "react-image-magnify": "^2.7.4",
     "react-inner-image-zoom": "^1.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
