--- a/FontEndAdmin/package.json
+++ b/FontEndAdmin/package.json
@@ -31,6 +31,7 @@
     "@coreui/react-chartjs": "^1.0.0",
     "@coreui/utils": "^1.3.1",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "antd": "^4.7.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
@@ -44,6 +45,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-images-upload": "^1.2.8",
     "react-redux": "7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "4.0.5"
