--- a/BackEnd/config/config.json
+++ b/BackEnd/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "300699",
-    "database": "shoedb",
+    "database": "shoedb1",
     "host": "localhost",
     "dialect": "postgres"
   },
