--- a/FontEnd/package.json
+++ b/FontEnd/package.json
@@ -12,11 +12,13 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.2",
     "bootstrap-input-spinner": "^1.16.3",
+    "cors": "^2.8.5",
     "js-cookie": "^2.2.1",
     "menu": "^0.2.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-cookie": "^4.0.3",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-image-magnifiers": "^1.4.0",
     "react-image-magnify": "^2.7.4",
