--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,3 +1,3 @@
 JWT_SECRET = NodeExpress
-GMAIL_USER = longprovn1999@gmail.com
-GMAIL_PASS = longlinh1999
+GMAIL_USER = demoshoeshop@gmail.com
+GMAIL_PASS = vulong1999
