--- a/FontEndAdmin/package.json
+++ b/FontEndAdmin/package.json
@@ -54,7 +54,7 @@
     "react-scripts": "^3.4.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=2000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:cov": "npm test -- --coverage --watchAll=false",
