--- a/FontEnd/package.json
+++ b/FontEnd/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "js-cookie": "^2.2.1",
     "menu": "^0.2.5",
+    "query-string": "^6.13.7",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-cookie": "^4.0.3",
@@ -23,6 +24,7 @@
     "react-image-magnifiers": "^1.4.0",
     "react-image-magnify": "^2.7.4",
     "react-inner-image-zoom": "^1.1.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5"
