--- a/FontEndAdmin/package.json
+++ b/FontEndAdmin/package.json
@@ -26,7 +26,7 @@
     "@coreui/chartjs": "^2.0.0",
     "@coreui/coreui": "^3.2.2",
     "@coreui/icons": "^2.0.0-beta.5",
-    "@coreui/icons-react": "^1.0.1",
+    "@coreui/icons-react": "^1.0.2",
     "@coreui/react": "^3.0.3",
     "@coreui/react-chartjs": "^1.0.0",
     "@coreui/utils": "^1.3.1",
@@ -46,7 +46,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-images-upload": "^1.2.8",
-    "react-redux": "7.2.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "4.0.5"
   },
