--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -16,8 +16,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "googleapis": "^63.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "multer-google-drive": "^1.0.3",
     "nodemailer": "^6.4.14",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
