--- a/FontEnd/package.json
+++ b/FontEnd/package.json
@@ -26,6 +26,7 @@
     "react-inner-image-zoom": "^1.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5"
   },
