--- a/FontEnd/package.json
+++ b/FontEnd/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^4.5.2",
     "bootstrap-input-spinner": "^1.16.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
     "http-proxy-middleware": "^1.0.6",
     "js-cookie": "^2.2.1",
     "menu": "^0.2.5",
