--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -7,3 +7,5 @@ GOOGLE_CLIENT_SECRET = r-yR-7ymryOMZyfOxLuxD07r
 FACEBOOK_CLIENT_ID = 868813773660845
 FACEBOOK_CLIENT_SECRET = 8ff48d23dbce664231243db007ffe2e5
 FACEBOOK_CALLBACK_URL = http://localhost:5000/api/user/auth/facebook/callback
+PAYPAL_CLIENT_ID = ATqcEbONzAHD-oKGr53KrsndFWeL-o20dE7NA6YJH-kynJPv9BJ2GuIEAhWkvaJgCWOoDFG9pGz4S0xn
+PAYPAL_CLIENT_SECRET = EPKHSeXPusT9nawomuPtJrbssBGJRS2XFhrNmgV8a7RjBxMC73Go7_aUNGIx6xRXe2ORsKXeh4OFg_2G
