--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -9,3 +9,6 @@ FACEBOOK_CLIENT_SECRET = 8ff48d23dbce664231243db007ffe2e5
 FACEBOOK_CALLBACK_URL = http://localhost:5000/api/user/auth/facebook/callback
 PAYPAL_CLIENT_ID = ATqcEbONzAHD-oKGr53KrsndFWeL-o20dE7NA6YJH-kynJPv9BJ2GuIEAhWkvaJgCWOoDFG9pGz4S0xn
 PAYPAL_CLIENT_SECRET = EPKHSeXPusT9nawomuPtJrbssBGJRS2XFhrNmgV8a7RjBxMC73Go7_aUNGIx6xRXe2ORsKXeh4OFg_2G
+
+PORT = 5000
+DOMAIN = http://localhost:5000
